gcp/31-petclinic-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic-ns
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: http
      appProtocol: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: petclinic-gateway
  namespace: petclinic-ns
  annotations:
    networking.gke.io/certmap: "petclinic-map"
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
    - type: NamedAddress
      value: petclinic
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: petclinic.yourcloudless.site
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petclinic-route
  namespace: petclinic-ns
spec:
  parentRefs:
    - name: petclinic-gateway
      namespace: petclinic-ns
      sectionName: https
  hostnames:
    - petclinic.yourcloudless.site
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: petclinic
          kind: Service
          group: ""
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petclinic-route-http
  namespace: petclinic-ns
spec:
  parentRefs:
    - name: petclinic-gateway
      namespace: petclinic-ns
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: petclinic
          kind: Service
          group: ""
          port: 80
          weight: 1
